--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,16 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 16px;
+}
+body {
+  margin: 0;
   font-family: "Inter", sans-serif;
+}
+
+.App {
+  
   // text-align: center;
 }
 
@@ -9,44 +20,34 @@ ul {
 li {
   list-style-type: none;
 }
-.glyph-list {
+.Head {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
-.glyph {
+.lead-space {
+  padding: 3rem;
+}
+
+.logo {
   display: flex;
+  padding: 1rem 3rem;
   position: relative;
   font-size: 3rem;
-  min-width: 9rem;
-  min-height: 9rem;
+  // width: 9rem;
+  height: 9rem;
   
-  justify-content: center;
-  align-items: center;
+  // justify-content: center;
+  // align-items: center;
   margin: 1px;
-  background-color: #f4f4f4;
-  cursor: pointer;
-  &:hover {
-    background-color: #d8d8d8;
-  }
-  a {
-    color: inherit;
-    text-decoration: none;
-  }
+  // background-color: #f4f4f4;
+  // cursor: pointer;
+  // &:hover {
+  //   background-color: #d8d8d8;
+  // }
+  // a {
+  //   color: inherit;
+  //   text-decoration: none;
+  // }
 }
 
-.glyph-number,
-.glyph-code {
-  position: absolute;
-  top: 0;
-  
-  color: #212121;
-  font-size: 0.5rem;
-  padding: 0.25rem;
-}
-.glyph-number {
-  left: 0;
-}
-.glyph-code {
-  right: 0;
-}
