Refactored Glyphs Library component, deleted old list. Major styles changes, added Fibre Design System styles. Added Footer.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables.scss';
+
 * {
   box-sizing: border-box;
 }
@@ -6,7 +8,8 @@ html {
 }
 body {
   margin: 0;
-  font-family: "Inter", sans-serif;
+  font-family: $font-stack; //"Inter", sans-serif;
+  background-color: $background;
 }
 
 .App {
