--- a/src/components/Glyph/styles.scss
+++ b/src/components/Glyph/styles.scss
@@ -1,22 +1,28 @@
-.glyph-list {
-  display: flex;
-  flex-wrap: wrap;
-}
+@import '../../styles/variables.scss';
+
+
 
 .glyph {
   display: flex;
   position: relative;
-  font-size: 3rem;
-  min-width: 9rem;
-  min-height: 9rem;
+  font-size: 2rem;
+  min-width: 6rem;
+  min-height: 6rem;
+  
+  width: 100%;
+  height: 100%;
   
   justify-content: center;
   align-items: center;
-  margin: 1px;
-  background-color: #f4f4f4;
+  background-color: $white;
+
   cursor: pointer;
   &:hover {
-    background-color: #d8d8d8;
+    background-color: $gray-10-hover;
+
+    .glyph-action {
+      display: block;
+    }
   }
   a {
     display: flex;
@@ -29,11 +35,20 @@
   }
 }
 
+// .glyph-symbol {
+//   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Helvetica, sans-serif;
+// }
+
+.glyph-number,
+.glyph-code,
+.glyph-action {
+  position: absolute;
+}
+
 .glyph-number,
 .glyph-code {
-  position: absolute;
   top: 0;
-  color: #212121;
+  color: $gray-90;
   font-size: 0.5rem;
   padding: 0.25rem;
 }
@@ -42,4 +57,17 @@
 }
 .glyph-code {
   right: 0;
+}
+.glyph-action {
+  display: none;
+  bottom: 0;
+  right: 0;
+  width: 3rem;
+  height: 3rem;
+  padding: 1rem;
+  .spbx--icon {
+    display: flex;
+    width: 1rem;
+    height: 1rem;
+  }
 }
