--- a/src/modules/GlyphLibrary/styles.scss
+++ b/src/modules/GlyphLibrary/styles.scss
@@ -1,7 +1,4 @@
-.glyph-library {
-  display: flex;
-  flex-wrap: wrap;
-}
+
 
 @import '../../styles/variables.scss';
 
@@ -10,45 +7,75 @@ $gutter: 1px;
 .Gallery-module {
   min-height: 62.5vw;
 }
+.Glyphs-module {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: -1rem;
+  margin-bottom: 4rem;
+}
+
+.glyph-library {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  margin-top: 3rem;
+}
+
 
 .Card {
   padding: $gutter;
-}
-
-.Card-inside {
-  
   &.aspect-ratio-flex {
     flex-grow: 1;
     min-width: calc(100% / 4);
   }
   &.aspect-ratio-1-1 {
-    max-width: calc(100% / 6);
-    flex: 0 0 calc(100% / 6);
+    .Card-inside {
+      padding-bottom: 100%;
+    }
+
+    max-width: calc(100% / 12);
+    flex: 0 0 calc(100% / 12);
 
     @media (max-width: 133rem) {
+      max-width: calc(100% / 12);
+      flex: 0 0 calc(100% / 12);
+    }
+    @media (max-width: 99rem) {
+      max-width: calc(100% / 8);
+      flex: 0 0 calc(100% / 8);
+    }
+    @media (max-width: 82rem) {
+      max-width: calc(100% / 6);
+      flex: 0 0 calc(100% / 6);
+    }
+    @media (max-width: 66rem) {
       max-width: calc(100% / 4);
       flex: 0 0 calc(100% / 4);
     }
-
-    @media (max-width: 82rem) {
-      max-width: calc(100% / 3);
-      flex: 0 0 calc(100% / 3);
+    @media (max-width: 42rem) {
+      max-width: calc(100% / 4);
+      flex: 0 0 calc(100% / 4);
     }
-    @media (max-width: 66rem) {
+    @media (max-width: 33rem) {
       max-width: calc(100% / 2);
       flex: 0 0 calc(100% / 2);
     }
-    @media (max-width: 42rem) {
-      max-width: calc(100%);
-      flex: 0 0 calc(100%);
-    }
+
   }
-  .Faceholder {
-    position: relative;
-    padding-bottom: 100%;
-    width: 100%;
-    height: 100%;
-  }
+}
+.Card-inside {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.Card-object {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .BumperSection {
