--- a/src/modules/CopyNotification/CopyNotification.scss
+++ b/src/modules/CopyNotification/CopyNotification.scss
@@ -1,3 +1,5 @@
+@import '../../styles/variables.scss';
+
 .Notification {
   position: sticky;
   display: flex;
@@ -8,5 +10,13 @@
   height: 0;
 }
 .Notification-container {
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+.Notification-content {
   padding: 1rem;
+  background: $yellow-color;
+  margin: 1rem auto;
 }
