Added <link> with font face to public/index.html

--- a/src/layout/Footer/Footer.scss
+++ b/src/layout/Footer/Footer.scss
@@ -3,6 +3,7 @@
 .Footer {
   min-height: 25vh;
   color: $gray-60;
+  font-feature-settings: $font-settings-02;
   background-color: $black;
 
   .Footer-container {
