--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,5 +1,6 @@
 $font-stack: 'Space Grotesk', sans-serif;
-
+$font-settings-01: "zero" on,"ss01" off,"ss02" on,"ss03" on,"ss04" on,"ss05" on,"liga" off;
+$font-settings-02: "zero" on,"ss01" off,"ss02" on,"ss03" on,"ss04" on,"ss05" off,"liga" off;
 
 $black: #000000;
 $white: #ffffff;
