Refactored header section and leadspace alement, changed look&feel: blue theme. Added manifest

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,8 @@ body {
   margin: 0;
   font-family: $font-stack;
   font-feature-settings: $font-settings-01;
-  background-color: $background;
+  background-color: $blue-80;
+  color: $white;
 }
 ul {
   padding: 0;
@@ -29,10 +30,12 @@ li {
 .Head {
   display: flex;
   flex-direction: column;
+  color: $blue-20;
 }
 
 .lead-space {
-  padding: 3rem 0;
+  margin: 1rem 0;
+  color: $blue-20;
 }
 
 .logo {
