--- a/src/components/Glyph/Glyph.scss
+++ b/src/components/Glyph/Glyph.scss
@@ -5,8 +5,8 @@
   display: flex;
   position: relative;
   font-size: 2rem;
-  min-width: 6rem;
-  min-height: 6rem;
+  // min-width: 6rem;
+  // min-height: 6rem;
   
   width: 100%;
   height: 100%;
@@ -69,8 +69,8 @@
 .glyph-action {
   bottom: 0;
   right: 0;
-  width: 3rem;
-  height: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
   padding: 1rem;
   .spbx--icon {
     display: flex;
