--- a/src/modules/GlyphLibrary/GlyphLibrary.scss
+++ b/src/modules/GlyphLibrary/GlyphLibrary.scss
@@ -18,6 +18,7 @@ $gutter: 1px;
   flex-wrap: wrap;
   width: 100%;
   margin-top: 3rem;
+  color: $blue-80;
 }
 
 
@@ -48,16 +49,16 @@ $gutter: 1px;
       flex: 0 0 calc(100% / 8);
     }
     @media (max-width: 66rem) {
-      max-width: calc(100% / 6);
-      flex: 0 0 calc(100% / 6);
+      max-width: calc(100% / 8);
+      flex: 0 0 calc(100% / 8);
     }
     @media (max-width: 42rem) {
       max-width: calc(100% / 4);
       flex: 0 0 calc(100% / 4);
     }
     @media (max-width: 33rem) {
-      max-width: calc(100% / 3);
-      flex: 0 0 calc(100% / 3);
+      max-width: calc(100% / 4);
+      flex: 0 0 calc(100% / 4);
     }
 
   }
