--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@ body {
   margin: 0;
   font-family: $font-stack;
   font-feature-settings: $font-settings-01;
-  background-color: $blue-80;
+  background-color: $background;
   color: $white;
 }
 ul {
