--- a/src/components/Glyph/Glyph.scss
+++ b/src/components/Glyph/Glyph.scss
@@ -5,8 +5,10 @@
   display: flex;
   position: relative;
   font-size: 2rem;
+  border: 0;
   // min-width: 6rem;
   // min-height: 6rem;
+  color: $background;
   
   width: 100%;
   height: 100%;
@@ -14,7 +16,7 @@
   justify-content: center;
   align-items: center;
   background-color: $white;
-  transition: 300ms;
+  transition: 150ms;
   cursor: pointer;
   &:hover {
     background-color: $gray-10-hover;
@@ -27,7 +29,7 @@
     background-color: $gray-30;
   }
   &:focus {
-    outline: 2px solid $primary-color;
+    outline: 4px solid $yellow-20;
     outline-offset: 1px;
     z-index: 1;
   }
