--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -129,7 +129,7 @@ $secondary-color: $gray-100;
 $tetrinary-color: $gray-30;
 
 
-$background: $gray-10;
+$background: $blue-80;
 
 $gray-elevation-0: rgba(141, 141, 141, 0.12);
 
