--- a/src/components/Glyph/Glyph.scss
+++ b/src/components/Glyph/Glyph.scss
@@ -4,20 +4,22 @@
 .Glyph {
   display: flex;
   position: relative;
-  font-size: 2rem;
-  // min-width: 6rem;
-  // min-height: 6rem;
+  // font-size: 2rem;
   
   width: 100%;
   height: 100%;
   
   justify-content: center;
   align-items: center;
-  background-color: $white;
+  color: $blue-20;
+  background-color: $blue-90; //$gray-100;
   transition: 300ms;
   cursor: pointer;
   &:hover {
-    background-color: $gray-10-hover;
+    color: $gray-20;
+    background-color: $gray-90-hover;
+    box-shadow: $elev-500;
+    z-index: 100;
     .glyph-action,
     .glyph-code {
       display: block;
