--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -118,15 +118,6 @@
 //   font-size: 1rem;
 // }
 
-
-
-p, span {
-  font-size: 0.875rem;
-  line-height: 1.125rem;
-  font-weight: 400;
-  letter-spacing: 0.1px;
-}
-
 h1 {
   font-size: 2.625rem;
   line-height: 2.125rem;
@@ -168,4 +159,20 @@ h6 {
   line-height: 1.125rem;
   font-weight: 600;
   letter-spacing: 0;
+}
+
+p, span {
+  font-size: 0.875rem;
+  line-height: 1.125rem;
+  font-weight: 400;
+  letter-spacing: 0.1px;
+}
+
+strong {
+  font-weight: 900;
+}
+
+.monoblock {
+  text-transform: uppercase;
+  line-height: 1.0;
 }
