--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,5 @@
 $font-stack: 'Space Grotesk', sans-serif;
 $font-settings-01: "zero" on,"ss01" off,"ss02" on,"ss03" on,"ss04" on,"ss05" on,"liga" off;
-$font-settings-02: "zero" on,"ss01" off,"ss02" on,"ss03" on,"ss04" on,"ss05" off,"liga" off;
 
 $black: #000000;
 $white: #ffffff;
@@ -140,6 +139,12 @@ $gray-elevation-16: rgba($gray-50, 0.16);
 $gray-elevation-12: rgba($gray-50, 0.12);
 $gray-elevation-8: rgba($gray-50, 0.08);
 $gray-elevation-4: rgba($gray-50, 0.04);
+
+
+$elev-100: 0 2px 4px rgba(0, 0, 0, 0.25), 0 4px 8px rgba(0, 0, 0, 0.25);
+$elev-300: 0 4px 8px rgba(0, 0, 0, 0.25), 0 8px 16px rgba(0, 0, 0, 0.25);
+$elev-500: 0 8px 16px rgba(0, 0, 0, 0.25), 0 16px 32px rgba(0, 0, 0, 0.25);
+$elev-700: 0 16px 32px rgba(0, 0, 0, 0.25), 0 32px 64px rgba(0, 0, 0, 0.25);
 
 
 
