--- a/src/modules/CopyNotification/CopyNotification.scss
+++ b/src/modules/CopyNotification/CopyNotification.scss
@@ -9,6 +9,7 @@
   right: 0;
   height: 0;
   color: $gray-100;
+  z-index: 1000;
 }
 .Notification-container {
   display: flex;
@@ -18,8 +19,20 @@
   
 }
 .Notification-content {
+  display: flex;
+  align-items: center;
   padding: 1rem;
   background: $white;
   margin: 1rem auto;
   box-shadow: $elev-700;
+  .glyph {
+    margin: 0 0.25rem;
+    font-weight: 600;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
 }
+
