--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -163,7 +163,7 @@ h6 {
 
 p, span {
   font-size: 0.875rem;
-  line-height: 1.125rem;
+  line-height: 1.3;
   font-weight: 400;
   letter-spacing: 0.1px;
 }
