--- a/src/components/Glyph/Glyph.scss
+++ b/src/components/Glyph/Glyph.scss
@@ -48,9 +48,16 @@
 //   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, Helvetica, sans-serif;
 // }
 
+.glyph-aria-id {
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 0;
+}
+
 .glyph-number,
 .glyph-code,
-.glyph-action {
+.glyph-action{
   position: absolute;
   display: none;
 }
